# hdl-archive

./: .gitignore  MODULE.bazel  README.md  flash.tcl
design/led/: BUILD.bazel  led_top.sv
fpga-gpu/: .gitignore  LICENSE  Makefile  README.md
fpga-gpu/bitstream/: bw-gradient.bit  color-gradient.bit  display-processor.bit  fhd-color-gradient.bit  fhd-color-gradient2.bit  finch-image.bit  rainbow-image.bit  ram_init.bit  random_ram_init.bit
fpga-gpu/block_design/: GpuTest.tcl  design_1.tcl  gpu.tcl
fpga-gpu/constraint/: Nexys-A7-100T.xdc
fpga-gpu/data/: 32bit_ram_init.mem  bram_contents.coe  fb_init.mem  finch_init.mem  gpu_mem_init.mem  index.mem  palette_init.mem  rgb332.mem  test.mem  zero.mem
fpga-gpu/deprecated/: gpu_controller.sv  gpu_controller_wrapper.v  gpu_memory.sv  ram.sv
fpga-gpu/hdl/: axi_gpu_io_registers.sv  counter.sv  easyaxil.v  framebuffer.sv  gpu.sv  gpu_top.v  latency.sv  microsd.v  palette.sv  skidbuffer.v  vga_timing_generator.sv  video_controller.sv
fpga-gpu/hdl/processor/: alu.sv  defines.svh  display_processor.sv  riscv_core.sv  sign_extend.sv
fpga-gpu/hdl/processor/controlpath/: alu_decoder.sv  control.sv  controlpath.sv  hazard.sv  opcode_decoder.sv
fpga-gpu/hdl/processor/datapath/: datapath.sv  decode.sv  execute.sv  fetch.sv  memory.sv  writeback.sv
fpga-gpu/hdl/processor/memory/: address_decoder.sv  cache.sv  cache_addr_decoder.sv  cache_way.sv  data_cache.sv  instruction_cache.sv  main_memory.sv  register_file.sv
fpga-gpu/scripts/: bitstream.tcl  export_bd.tcl  hwtest.tcl  implement.tcl  init_vivado.tcl  memory.py  sample.tcl  synthesize.tcl
fpga-gpu/src/: framebuffer.c  framebuffer.h  gputest.ld  graphics.c  graphics.h  io_reg.c  io_reg.h  main.c  palette.c  palette.h  riscvtest.asm  startup.asm
fpga-gpu/testbench/: axi_vip_mst_stimulus.sv  tb_counter.sv  tb_display_processor.sv  tb_gpu.sv  tb_vga.sv
fpga-gpu/vitis/: .gitignore
fpga-gpu/vitis/doom/: compile_commands.json  vitis-comp.json
fpga-gpu/vitis/doom/src/: CMakeLists.txt  Empty_applicationExample.cmake  UserConfig.cmake  app.yaml  doomgeneric_microblaze.cpp  gpu.c  gpu.h  lscript.ld  platform.cpp  platform.h
fpga-gpu/vitis/doom/src/doomgeneric/: doomgeneric.c  doomgeneric.h  i_system.c  i_video.c  i_video.h  m_misc.cpp  w_file_stdc.cpp
fpga-gpu/vitis/doom/src/sdcard/: File.cpp  SD.cpp  SD.h  Sd2Card.cpp  Sd2Card.h  SdFat.h  SdFatUtil.h  SdFile.cpp  SysTick.c  SysTick.h  spi.c  spi.h
fpga-gpu/vitis/platform/: vitis-comp.json
fpga-gpu/vitis/platform/hw/sdt/: design_1_wrapper.bit  pl.dtsi  system-top.dts
fpga-gpu/vitis/platform/microblaze_riscv_0/standalone_microblaze_riscv_0/bsp/: bsp.yaml
fpga-gpu/vitis/test/: compile_commands.json  vitis-comp.json
fpga-gpu/vitis/test-platform/: vitis-comp.json
fpga-gpu/vitis/test-platform/hw/sdt/: pl.dtsi  system-top.dts  test.bit  test.mmi
fpga-gpu/vitis/test/src/: CMakeLists.txt  Hello_worldExample.cmake  UserConfig.cmake  app.yaml  gpu.c  gpu.h  lscript.ld  platform.c  test.c
hdl/counter/sim/: counter_tb.sv
hdl/counter/src/: counter.sv
hdl/fsm/src/: fsm.sv
hdl/memory/src/: block_memory.sv
modules/counter/: BUILD.bazel
modules/counter/sim/: counter_tb.sv
modules/counter/src/: counter.sv
modules/fixed_delay/: BUILD.bazel
modules/fixed_delay/sim/: fixed_delay_tb.sv
modules/fixed_delay/src/: fixed_delay.sv
rtl/LiteDRAM/: BUILD.bazel
rtl/OtherSources/dmi/: BUILD.bazel
rtl/SweRVolfSoC/: BUILD.bazel  rvfpgasim.v  swervolf_core.v
rtl/SweRVolfSoC/BootROM/: BUILD.bazel
rtl/SweRVolfSoC/Interconnect/AxiInterconnect/: BUILD.bazel
rtl/SweRVolfSoC/Interconnect/WishboneInterconnect/: BUILD.bazel
rtl/SweRVolfSoC/Peripherals/gpio/: gpio_defines.vh  gpio_top.v
rtl/SweRVolfSoC/Peripherals/ptc/: ptc_top.v
rtl/SweRVolfSoC/Peripherals/uart/: uart_defines.vh  uart_receiver.v  uart_regs.v  uart_rfifo.v  uart_wb.v
rtl/SweRVolfSoC/SweRVEh1CoreComplex/: swerv_wrapper_dmi.sv
rtl/SweRVolfSoC/SweRVEh1CoreComplex/include/: swerv.config
rtl/clk_gen_nexys/: BUILD.bazel
rtl/counter/: BUILD.bazel  counter.sv  counter_tb.sv
rtl/memory/: BUILD.bazel
rtl/pulp_platform/axi_0.25.0/: BUILD.bazel
rtl/top/rvfpganexys/: BUILD.bazel
sim_lib/: BUILD.bazel  sim_lib_pkg.sv
tools/vivado/: xilinx_env.sh
(+70 files in other folders)
