load("@rules_verilog//verilog:defs.bzl", "verilog_library")

verilog_library(
  name = "sv_sim_lib",
  srcs = glob([
    "*.sv",
  ]),
  visibility = ["//visibility:public"],
)

filegroup(
  name = "cpp_sim_lib",
  srcs = glob([
    "*.cpp",
    "*.cc",
  ]),
  visibility = ["//visibility:public"],
)
