load("@rules_verilog//verilog:defs.bzl", "verilog_library")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

verilog_library(
    name = "counter",
    srcs = glob([
        "src/*.sv",
        "sim/*.sv",
    ]),
)

verilator_cc_library(
    name = "counter_tb_verilated",
    module = ":counter",
    module_top = "counter_tb",
    trace = True,
    vopts = [
        "-Wall",
        "--timing",
        "--main",
    ],
)

cc_test(
    name = "sim",
    deps = [
        ":counter_tb_verilated", 
    ],
)
