load("@rules_verilog//verilog:defs.bzl", "verilog_library")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

verilog_library(
    name = "fixed_delay",
    srcs = glob([
        "src/*.sv",
        "sim/*.sv",
    ]),
    deps = [
        "//sim_lib:sim_lib_sv",
    ],
)

verilator_cc_library(
    name = "fixed_delay_tb_verilated_main",
    module = ":fixed_delay",
    module_top = "fixed_delay_tb",
    timing = True,
    trace = True,
    vopts = [
        "-Wall",
        "--main",
    ],
)

cc_test(
    name = "sim",
    srcs = [
        "//sim_lib:sim_lib_cpp",
    ],
    deps = [
        ":fixed_delay_tb_verilated_main", 
    ],
)
